# VIGIL

./: .gitignore  README.md  about.json  docker-compose.yml
client_web/: package-lock.json  package.json
server/: Cargo.toml
server/migrations/: 0001_users.sql  0002_teams.sql  0003_team_members.sql  0004_team_invitations.sql  0005_team_bans.sql  0006_incidents.sql  0007_incident_timeline.sql  0008_timeline_reactions.sql  0009_releases.sql  0010_release_steps.sql  0011_release_incidents.sql  0012_private_messages.sql  0013_user_tokens.sql  0014_rules.sql  0015_rule_logs.sql  0016_add_token_invalidated_at_to_users.sql
server/src/: db.rs  lib.rs  main.rs
server/src/handlers/: auth_handler.rs
server/src/middleware/: auth_middleware.rs
server/src/models/: user.rs
server/src/repositories/: user_repository.rs
server/src/routes/: auth_routes.rs  mod.rs
server/src/services/: auth_service.rs
server/tests/functional/: auth_functional_test.rs
server/tests/integration/: auth_integration_test.rs
server/tests/unit/: auth_unit_test.rs
