[package]
name = "vigil-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Framework web
axum = { version = "0.7", features = ["ws"] }

# Moteur asynchrone
tokio = { version = "1", features = ["full"] }

# Sérialisation / désérialisation JSON
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base de données PostgreSQL
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }

# UUID pour les identifiants
uuid = { version = "1", features = ["v4", "serde"] }

# Dates et heures
chrono = { version = "0.4", features = ["serde"] }

# Variables d'environnement
dotenv = "0.15"

# Hashage des mots de passe
argon2 = "0.5"

# Tokens JWT
jsonwebtoken = "9"

# Logs
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "15"